--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+/* TUTORIAL STUFF */
 h1 
 {
     color: #369;
@@ -21,9 +24,4 @@ body
 body, input[type="text"], button 
 {
     color: #888;
-    font-family: Cambria, Georgia;
-}
-    /* everywhere else */
-* {
-    font-family: Arial, Helvetica, sans-serif;
 }
