--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
-<app-header></app-header>>
-<nav>
-    <a routerLink="/cards">Cards</a>
-</nav>
-<router-outlet></router-outlet>
+<app-header></app-header>
+<div class="content-container">
+    <router-outlet></router-outlet>
+</div>
 <app-messages></app-messages>
