--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
+body {
+    margin: 0;
+}
+
+.fill {
+    flex-grow: 1;
+}
+
 /* TUTORIAL STUFF */
 h1 
 {
@@ -14,11 +22,6 @@ h2, h3
     color: #444;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: lighter;
-}
-
-body 
-{
-    margin: 2em;
 }
 
 body, input[type="text"], button 
