--- a/src/app/components/card-collection/card-collection.component.html
+++ b/src/app/components/card-collection/card-collection.component.html
@@ -1,3 +1,35 @@
-<p>
-  card-collection works!
-</p>
+<mat-form-field class="filter">
+    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+</mat-form-field>
+
+<table mat-table [dataSource]="dataSource">
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+  
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
+  
+    <!-- Sub Title Column -->
+    <ng-container matColumnDef="subTitle">
+      <th mat-header-cell *matHeaderCellDef> Sub Title </th>
+      <td mat-cell *matCellDef="let element"> {{element.subTitle}} </td>
+    </ng-container>
+
+    <!-- Tags Column <td mat-cell *matCellDef="let element"> {{element.subTitle}} </td> -->
+    <ng-container matColumnDef="tags">
+        <th mat-header-cell *matHeaderCellDef> Tags </th>
+        <td mat-cell *matCellDef="let element">
+
+            <mat-chip-list>
+                <mat-chip *ngFor="let tag of element.tags">{{ tag }}</mat-chip>
+            </mat-chip-list>
+
+        </td>        
+      </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>  
