--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,13 +2,13 @@ h1 {
     color: #369;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 250%;
-  }  
+  }
 
 .content-container {
     max-width: 1200px;
     width: 100%;
-    height: 100vh;
-    margin: 0 auto;    
+    min-height: 100vh;
+    margin: 0 auto;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
     background-color: white;
     padding: 5em 0 0 0;
