--- a/src/app/components/spell-card-detail/spell-card-detail.component.html
+++ b/src/app/components/spell-card-detail/spell-card-detail.component.html
@@ -1,18 +1,12 @@
 <div *ngIf="card">
-  <h2>{{ card.name | uppercase }} Details</h2>
-  <div><span>id: </span>{{ card.id }}</div>
-  <div>
-    <label>name: <input [(ngModel)]="card.name" placeholder="name" /> </label>
-  </div>
-
   <div class="background-border">
     <div class="background">
       <div class="content-container">
         <div class="title">{{ card.name }}</div>
         <div class="sub-title">{{ card.subTitle }}</div>
         <ul class="properties-container">
-          <li *ngFor="let property of card.properties | keyvalue" class="card-properties">
-            <div><b>{{property.key}}</b>{{property.value}}</div>
+          <li *ngFor="let property of card.properties" class="card-properties">
+            <div><b>{{property.name}}</b>{{property.value}}</div>
           </li>
         </ul>
         <div class="card-text">{{ card.content }}</div>
