added tags to the card editor

--- a/src/app/components/card-editor/card-editor.component.html
+++ b/src/app/components/card-editor/card-editor.component.html
@@ -1,31 +1,45 @@
-<form>
-    <mat-form-field class="full-width">
-      <input matInput placeholder="Title" [(ngModel)]="selectedCard.name" name="title">
-    </mat-form-field>
-    <mat-form-field class="full-width">
-      <input matInput placeholder="Sub Title" [(ngModel)]="selectedCard.subTitle" name="subTitle">
-    </mat-form-field>
-
-    <label>Properties</label>
-    <mat-list role="list">
-      <mat-list-item role="listitem"  *ngFor="let property of selectedCard.properties; let i = index">
-        <mat-form-field class="half-width">
-            <input matInput placeholder="" [value]="property.name" (keyup)="updatePropertyName(i, $event)">
-        </mat-form-field>
-        <mat-form-field class="half-width">
-            <input matInput placeholder="" [value]="property.value"  (keyup)="updatePropertyValue(i, $event)">
-        </mat-form-field>
-        <button mat-icon-button (click)="removeProperty(i)"><mat-icon>cancel</mat-icon></button>
-      </mat-list-item>
-    </mat-list>
-    <button mat-icon-button (click)="addNewProperty()"><mat-icon>add</mat-icon></button>
-
-    <mat-form-field class="full-width">
-      <textarea matInput placeholder="Description"  [(ngModel)]="selectedCard.content" name="content"></textarea>
-    </mat-form-field>
-    <mat-form-field class="full-width">
-        <textarea matInput placeholder="At Higher Level"  [(ngModel)]="selectedCard.atHigherLevel" name="atHigherLevel"></textarea>
+<div class="card-editor-container">
+  <form>
+      <mat-form-field class="full-width">
+        <input matInput placeholder="Title" [(ngModel)]="selectedCard.name" name="title">
       </mat-form-field>
-</form>
+      <mat-form-field class="full-width">
+        <input matInput placeholder="Sub Title" [(ngModel)]="selectedCard.subTitle" name="subTitle">
+      </mat-form-field>
 
-<app-spell-card-detail [card]="selectedCard"></app-spell-card-detail>
+      <label>Properties</label>
+      <mat-list role="list">
+        <mat-list-item role="listitem"  *ngFor="let property of selectedCard.properties; let i = index">
+          <mat-form-field class="half-width">
+              <input matInput placeholder="" [value]="property.name" (keyup)="updatePropertyName(i, $event)">
+          </mat-form-field>
+          <mat-form-field class="half-width">
+              <input matInput placeholder="" [value]="property.value"  (keyup)="updatePropertyValue(i, $event)">
+          </mat-form-field>
+          <button mat-icon-button (click)="removeProperty(i)"><mat-icon>cancel</mat-icon></button>
+        </mat-list-item>
+      </mat-list>
+      <button mat-icon-button (click)="addNewProperty()"><mat-icon>add</mat-icon></button>
+
+      <mat-form-field class="full-width">
+        <textarea matInput placeholder="Description"  [(ngModel)]="selectedCard.content" name="content"></textarea>
+      </mat-form-field>
+      <mat-form-field class="full-width">
+          <textarea matInput placeholder="At Higher Level"  [(ngModel)]="selectedCard.atHigherLevel" name="atHigherLevel"></textarea>
+      </mat-form-field>
+
+      <mat-form-field class="full-width">
+        <mat-chip-list #tagList>
+          <mat-chip *ngFor="let tag of selectedCard.tags; let i = index" (removed)="removeTag(i)">
+            {{tag}}
+            <mat-icon matChipRemove>cancel</mat-icon></mat-chip>
+        </mat-chip-list>
+        <input placeholder="Tags"
+            [matChipInputFor]="tagList"
+            [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+            (matChipInputTokenEnd)="addTag($event)">
+      </mat-form-field>
+  </form>
+
+  <app-spell-card-detail [card]="selectedCard"></app-spell-card-detail>
+</div>
