--- a/src/app/components/card-editor/card-editor.component.css
+++ b/src/app/components/card-editor/card-editor.component.css
@@ -1,14 +1,15 @@
+.card-editor-container {
+  margin: 0 auto;
+  width: 100%;
+}
+
 form {
   margin: 0 1em;
   width: 30em;
-  float: left;
-  display: inline;
 }
 
 app-spell-card-detail {
-  float: right;
   margin: 0 1em;
-  display: inline;
 }
 
 .full-width {
