--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -2,6 +2,10 @@ button {
     margin: 0 0.25em;
 }
 
+.new-card {
+    margin: 0 1.5em;
+}
+
 .header {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
     position: fixed;
