added a delete card button

--- a/src/app/components/card-editor/card-editor.component.html
+++ b/src/app/components/card-editor/card-editor.component.html
@@ -43,3 +43,7 @@
 
   <app-spell-card-detail [card]="selectedCard"></app-spell-card-detail>
 </div>
+<div class="delete-card-container">
+    <span class="fill"></span>
+    <button mat-raised-button color="warn" (click)="deleteCard()">Delete Card</button>
+</div>
