--- a/src/app/components/card-editor/card-editor.component.css
+++ b/src/app/components/card-editor/card-editor.component.css
@@ -1,6 +1,7 @@
 .card-editor-container {
   margin: 0 auto;
-  width: 100%;
+  width: 80%;
+  display: flex;
 }
 
 form {
@@ -22,4 +23,10 @@ app-spell-card-detail {
 
 .mat-input-element {
   color: black;
+}
+
+.delete-card-container {
+  margin: 0 auto;
+  width: 80%;
+  display: flex;
 }
