--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,5 +11,11 @@ h1 {
     margin: 0 auto;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
     background-color: white;
-    padding: 5em 0 0 0;
+    padding: 4em 0 0 0;
+}
+
+@media print {
+  .content-container {
+    padding: 0;
+   }
 }
