--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
-<div class="content-container">
+<div class="content-container" override>
     <router-outlet></router-outlet>
+    <app-print-document></app-print-document>
 </div>
 <app-messages></app-messages>
