--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
       <button mat-raised-button color="accent" class="new-card" (click)="createNewCard()">New Card</button>
       <button mat-raised-button color="accent" routerLink="/collection">Collection</button>
       <button mat-raised-button color="accent" routerLink="/deck">Deck</button>      
-      <button mat-icon-button><mat-icon>print</mat-icon></button>
+      <button mat-icon-button  routerLink="/print"><mat-icon>print</mat-icon></button>
       <button mat-icon-button (click)="exportCardData()"><mat-icon>save</mat-icon></button>
   </span>
   </div>
