--- a/src/app/components/print-page/print-page.component.css
+++ b/src/app/components/print-page/print-page.component.css
@@ -7,7 +7,9 @@
 
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: center;
+  align-content: center;
+  flex-direction: row;
 }
 
 @page {
