--- a/src/app/components/print-page/print-page.component.css
+++ b/src/app/components/print-page/print-page.component.css
@@ -10,6 +10,8 @@
   justify-content: center;
   align-content: center;
   flex-direction: row;
+
+  -webkit-print-color-adjust: exact;
 }
 
 @page {
