--- a/src/app/components/spell-card-detail/spell-card-detail.component.css
+++ b/src/app/components/spell-card-detail/spell-card-detail.component.css
@@ -1,6 +1,6 @@
 .background-border {
-	width: 63.50mm;
-  height: 88.9mm;
+	width: 100%;
+  height: 100%;
   background-color: #444444;
   border-radius: 3mm;
   display: flex;
