--- a/src/app/components/spell-card-detail/spell-card-detail.component.html
+++ b/src/app/components/spell-card-detail/spell-card-detail.component.html
@@ -1,5 +1,5 @@
-<div *ngIf="card">
-  <div class="background-border">
+<div class="card-size-poker">
+  <div *ngIf="card" class="background-border">
     <div class="background">
       <div class="content-container">
         <div class="title">{{ card.name }}</div>
