--- a/src/styles.css
+++ b/src/styles.css
@@ -9,22 +9,27 @@ body {
     flex-grow: 1;
 }
 
+.card-size-poker {
+	width: 63.50mm;
+  height: 88.9mm;
+}
+
 /* TUTORIAL STUFF */
-h1 
+h1
 {
     color: #369;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 250%;
 }
 
-h2, h3 
+h2, h3
 {
     color: #444;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: lighter;
 }
 
-body, input[type="text"], button 
+body, input[type="text"], button
 {
     color: #888;
 }
