--- a/src/app/components/card-collection/card-collection.component.html
+++ b/src/app/components/card-collection/card-collection.component.html
@@ -8,6 +8,17 @@
 <table mat-table [dataSource]="dataSource">
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
+    <!-- Checkbox Column -->
+    <ng-container matColumnDef="select">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element">
+        <mat-checkbox (click)="$event.stopPropagation()"
+                      (change)="$event ? selection.toggle(element) : null"
+                      [checked]="selection.isSelected(element)">
+        </mat-checkbox>
+      </td>
+    </ng-container>
+
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
