--- a/src/app/components/spell-card-detail/spell-card-detail.component.css
+++ b/src/app/components/spell-card-detail/spell-card-detail.component.css
@@ -7,7 +7,7 @@
 }
 .background {
 	margin: auto auto;
-  background-color: #dad5d5;
+  background-color: #f5f1f0;
   border-radius: 2mm;
   width: 95%;
   height: 95.6%;
@@ -20,9 +20,9 @@
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 }
 .title {
-  padding-top: 3mm;
-  color: #58170d;
-  font-size: 5mm;
+  padding-top: 1mm;
+  color: #550e10;
+  font-size: 5.5mm;
   text-transform:capitalize;
   font-variant:small-caps;
 }
@@ -62,5 +62,5 @@
 .line-break {
   width: 100%;
   height: 2px;
-  background-color: #c7aa75;
+  background-color: #c9ad6d;
 }
