added line break support

--- a/src/app/components/spell-card-detail/spell-card-detail.component.html
+++ b/src/app/components/spell-card-detail/spell-card-detail.component.html
@@ -9,7 +9,7 @@
             <div><b class="property-name">{{property.name}}</b>{{property.value}}</div>
           </li>
         </ul>
-        <div class="card-text">{{ card.content }}</div>
+        <pre class="card-text">{{ card.content }}</pre>
         <div *ngIf="card.atHigherLevel" class="at-higher-levels-container">
           <div class="at-higher-levels">Higher Levels</div>
           <div class="line-break"></div>
