--- a/src/app/components/card-editor/card-editor.component.html
+++ b/src/app/components/card-editor/card-editor.component.html
@@ -22,10 +22,24 @@
       <button mat-icon-button (click)="addNewProperty()"><mat-icon>add</mat-icon></button>
 
       <mat-form-field class="full-width">
-        <textarea matInput placeholder="Description"  [(ngModel)]="selectedCard.content" name="content"></textarea>
+        <textarea
+          matInput placeholder="Description"
+          [(ngModel)]="selectedCard.content"
+          name="content"
+          cdkTextareaAutosize
+          #autosize="cdkTextareaAutosize"
+          cdkAutosizeMinRows="2"></textarea>
       </mat-form-field>
+
       <mat-form-field class="full-width">
-          <textarea matInput placeholder="At Higher Level"  [(ngModel)]="selectedCard.atHigherLevel" name="atHigherLevel"></textarea>
+          <textarea
+            matInput
+            placeholder="At Higher Level"
+            [(ngModel)]="selectedCard.atHigherLevel"
+            name="atHigherLevel"
+            cdkTextareaAutosize
+            #autosize="cdkTextareaAutosize"
+            cdkAutosizeMinRows="2"></textarea>
       </mat-form-field>
 
       <mat-form-field class="full-width">
