--- a/src/app/components/spell-card-detail/spell-card-detail.component.html
+++ b/src/app/components/spell-card-detail/spell-card-detail.component.html
@@ -1,5 +1,5 @@
 <div class="card-size-poker">
-  <div *ngIf="card" class="background-border" [ngStyle]="{'background-color': card.borderColor}">
+  <div *ngIf="card" class="background-border" [ngStyle]="{'background-color': card.borderColor.hex}">
     <div class="background">
       <div class="content-container">
         <div class="title">{{ card.name }}</div>
