--- a/src/app/components/card-collection/card-collection.component.html
+++ b/src/app/components/card-collection/card-collection.component.html
@@ -19,11 +19,10 @@
       </td>
     </ng-container>
 
-
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <td class="clickable" mat-cell *matCellDef="let element" [routerLink]="['/card', element.id]"> {{element.name}} </td>
     </ng-container>
 
     <!-- Sub Title Column -->
