--- a/src/app/components/card-elements/card-title/card-title.component.css
+++ b/src/app/components/card-elements/card-title/card-title.component.css
@@ -1,7 +1,7 @@
 .title {
     padding-top: 1mm;
-    color: #550e10;
+    color: #822000;
     font-size: 5.5mm;
-    text-transform:capitalize;
-    font-variant:small-caps;
+    font-family: MrsEavesSmallCapsRegular;
+    font-weight: bold;
   }
