--- a/src/app/components/spell-card-detail/spell-card-detail.component.html
+++ b/src/app/components/spell-card-detail/spell-card-detail.component.html
@@ -1,7 +1,7 @@
 <div class="card-size-poker">
-  <div *ngIf="card" class="background-border" [ngStyle]="{'background-color': card.borderColor.hex}">
+  <div class="background-border" [ngStyle]="{'background-color': card.borderColor.hex}">
     <div class="background">
-      <div class="content-container">
+      <div class="content-container" insert-container>
         <div class="title">{{ card.name }}</div>
         <div class="sub-title">{{ card.subTitle }}</div>
         <ul class="properties-container">
