added sub title and a way to update the layout live

--- a/src/app/components/card-editor/card-editor.component.html
+++ b/src/app/components/card-editor/card-editor.component.html
@@ -65,6 +65,7 @@
           matInput
           placeholder="Layout"
           [(ngModel)]="selectedCard.layoutText"
+          (ngModelChange)="cardLayoutChange()"
           name="layoutText"
           cdkTextareaAutosize
           #autosize="cdkTextareaAutosize"
