--- a/src/app/components/spell-card-detail/spell-card-detail.component.css
+++ b/src/app/components/spell-card-detail/spell-card-detail.component.css
@@ -1,7 +1,7 @@
 .background-border {
 	width: 100%;
   height: 100%;
-  border-radius: 3mm;
+  border-radius: 2mm;
   display: flex;
 }
 .background {
@@ -9,17 +9,20 @@
   background-image: url('../../../assets/paper-texture-top.png'),url('../../../assets/paper-texture-tiling.png');
   background-position: top, center;
   background-repeat: no-repeat, repeat;
-  border-radius: 2mm;
-  width: 95%;
-  height: 95.6%;
+  border-radius: 1mm;
+  width: calc(100% - 2mm);
+  height: calc(100% - 2mm);
 }
 .content-container {
   position: relative;
-	width: 90%;
+	width: calc(100% - 4mm);
   height: 100%;
   margin: auto;
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 }
+
+
+
 .title {
   padding-top: 1mm;
   color: #550e10;
