--- a/src/app/components/card-editor/card-editor.component.css
+++ b/src/app/components/card-editor/card-editor.component.css
@@ -34,3 +34,32 @@ label {
   width: 80%;
   display: flex;
 }
+
+.hightlight-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding: 2px 0;
+  margin: -2px 0;
+  left: 0px;
+  color: transparent;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  pointer-events: none;
+  z-index: 0;
+
+  -webkit-user-select: none;  /* Chrome all / Safari all */
+  -moz-user-select: none;     /* Firefox all */
+  -ms-user-select: none;      /* IE 10+ */
+  user-select: none;          /* Likely future */   
+}
+
+.keyword {
+  color: rgba(11, 5, 80, 0.678);
+  border-radius: 3px;
+}
+
+.seperator {
+  color: rgba(11, 5, 80, 0.678);
+  border-radius: 3px;
+}
