--- a/src/app/components/card-editor/card-editor.component.html
+++ b/src/app/components/card-editor/card-editor.component.html
@@ -5,6 +5,7 @@
       </mat-form-field>
       
       <mat-form-field class="full-width">
+          <span [innerHtml]="highlightText" class="hightlight-container"></span>
           <textarea
             matInput
             placeholder="Layout"
@@ -18,7 +19,7 @@
 
       <div class="full-width">
           <label>Background Color: </label>
-          <bytelabs-color-selector [(color)]="selectedCard.borderColor"></bytelabs-color-selector>
+          <bytelabs-color-selector  [(color)]="selectedCard.borderColor"></bytelabs-color-selector>
       </div>
 
       <mat-form-field class="full-width">
