--- a/src/app/components/spell-card-detail/spell-card-detail.component.html
+++ b/src/app/components/spell-card-detail/spell-card-detail.component.html
@@ -1,4 +1,4 @@
-<div class="card-size-poker">
+<div #cardSizeContainer class="card-size-poker">
   <div class="background-border" [ngStyle]="{'background-color': card.borderColor.hex}">
     <div class="background">
       <div class="content-container">
