--- a/src/app/components/card-editor/card-editor.component.html
+++ b/src/app/components/card-editor/card-editor.component.html
@@ -12,6 +12,7 @@
           name="cardSizeType">
           <mat-option value="card-size-poker">Poker</mat-option>
           <mat-option value="card-size-tarot">Tarot</mat-option>
+          <mat-option value="card-size-a6h">A6H</mat-option>
         </mat-select>
       </mat-form-field>
       
