added another card size

--- a/src/app/components/card-editor/card-editor.component.html
+++ b/src/app/components/card-editor/card-editor.component.html
@@ -12,7 +12,8 @@
           name="cardSizeType">
           <mat-option value="card-size-poker">Poker</mat-option>
           <mat-option value="card-size-tarot">Tarot</mat-option>
-          <mat-option value="card-size-a6h">A6H</mat-option>
+          <mat-option value="card-size-oversize-h">Oversize</mat-option>
+          <mat-option value="card-size-a6-h">A6H</mat-option>
         </mat-select>
       </mat-form-field>
       
