working gmail login

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,6 +10,7 @@
 
       <input style="display: none" type="file" (change)="importCardData($event)" #fileInput>
       <button mat-icon-button (click)="fileInput.click()"><mat-icon>cloud_upload</mat-icon></button>
+      <app-user></app-user>
   </span>
   </div>
 </mat-toolbar>
