fixed layout of the google login button

--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,1 +1,1 @@
-<div class="g-signin2" data-onsuccess="onSignIn"></div>
+<div class="g-signin2" data-width="120" data-height="36" data-onsuccess="onSignIn"></div>
