--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -6,6 +6,10 @@ button {
     margin: 0 1.5em;
 }
 
+.app-user{
+    height: 36px;
+}
+
 .header {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
     position: fixed;
